<resources>
    <string name="app_name">Purdue Laundry</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Status">Status Picture</string>
    <string name="title_activity_main">Purdue Laundry</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_infromation">InfromationActivity</string>
    <string name="MachineImageInformation">Image for Machine</string>
    <string name="display_parameters">Display Only</string>
    <string name="select_options">Filter</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="MachineID">Machine XXX</string>
    <string name="Time">0 Minutes Remaining</string>
    <string name="Finished">Set an alarm for when finished</string>
    <string name="five_until_fin">Set an alarm for 5 minutes before finished</string>
    <string name="dryers_available">Dryers Available</string>
    <string name="washers_available">Washers Available</string>
    <string name="ResHallPic">Photograph of this residence hall.</string>
    <string name="offlineText">Offline</string>
    <string name="reminder_already_set">You already have a reminder set for this machine</string>
    <string name="machine_not_running">This machine is not running</string>
    <string name="alarm">Alarm</string>
    <string name="ask_set_alarm">Would you like to set an alarm for when the machine is finished?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_alarm_set">No Alarm Set</string>
    <string name="alarm_set">Alarm Set</string>
    <string name="loading_machines">Loading, please wait...</string>
    <string name="error_client_message">Oops! Looks like you\'re having trouble connecting.\nCheck your network settings and try again.</string>
    <string name="error_server_message">Oops! We\'re having problems. Please try again later.</string>
    <string name="location_error_try_again">Try Again</string>
    <string name="notify_on_washer_available">Notify me when a washer is available.</string>
    <string name="notify_on_dryer_available">Notify me when a dryer is available.</string>
    <string name="fragment_no_machine">No machines to set a timer for!</string>
    <string name="fragment_offline_location">It looks like this location is offline. Please go to the laundry room to check machines.</string>
    <string name="machine_activity_too_filtered">Please select some machine types to show.</string>

    <string name="available_timer_refresh">Refresh</string>
    <string name="available_timer_cancel">Dismiss</string>
    <string name="available_timer_message1">Load</string>
    <string name="available_timer_message2">to start a timer for when the machine is finished</string>

    <string name="notification_channel_name">Laundry Timer Alert</string>
    <string name="notification_channel_desc">The timer used to alert you when your laundry is finished.</string>

    <array name="options">
        <item>Available</item>
        <item>In Use</item>
        <item>Almost Done</item>
        <item>End Of Cycle</item>
    </array>
</resources>
