<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/sliding_tabs"
                style="@style/TabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appSecondaryColor"
                app:tabGravity="fill"
                app:tabMode="fixed" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <TextView
            android:id="@+id/machine_activity_filtering_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgGray"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="Only showing available machines."
            android:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>