...
            android:layout_height="fill_parent"
            android:layout_below="@+id/toolbar"
            android:background="@color/bgGray"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
...
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:indeterminate="true"
                android:progressDrawable="@drawable/progress" />

            <TextView
                android:id="@+id/location_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:paddingBottom="10dp" />

            <Button
                android:id="@+id/location_error_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location_error_text"
                android:layout_centerHorizontal="true"
                android:text="@string/location_error_try_again" />
        </RelativeLayout>
...
